add .vscode to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 data
 *.txt
+.vscode
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,visualstudiocode
