--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,13 @@ plugins {
 
 }
 
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -99,4 +106,11 @@ run {
 tasks.named('test') {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+}
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled true
+    }
 }
