--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 data
 *.txt
 .vscode
+src/test/java/searchengine/WebServerTest.java
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,visualstudiocode
@@ -141,3 +142,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows
 .vscode/settings.json
+src/test/java/searchengine/WebServerTest.java
