add WebServerTest to gitigore again

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 data
 *.txt
 .vscode
+src/test/java/searchengine/WebServerTest.java
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,visualstudiocode
